# TipPay-Finance

./: .cursorrc.md  Cargo.toml  Dockerfile  build.gradle.kts  docker-compose.yml  package-lock.json  package.json  requirements.md  requirements.txt  tailwind.config.js  tailwind.config.ts
.github/workflows/: cd.yml  ci.yml  monitoring.yml  release.yml  tests.yml
apps/fraud_detection/: models.py  tasks.py
apps/fraud_detection/api/: endpoints.py  schemas.py  test_schemas.py
apps/fraud_detection/ml/: models.py  utils.py
backend/tests/: conftest.py  requirements.txt  test_fraud_detection.py
frontend/: jest.config.js
frontend/tests/components/: TransactionForm.test.tsx
k8s/deployments/: tippay-services.yaml
k8s/ingress/: tippay-ingress.yaml
k8s/logging/: elastic-statefulset.yaml  filebeat-config.yaml  logstash.conf
k8s/monitoring/: grafana-dashboard.json  prometheus-config.yaml
k8s/quotas/: tippay-quota.yaml
k8s/secrets/: security-secrets.yaml
k8s/services/: tippay-services.yaml
src/: main.rs  middleware.ts
src/api/: transactions.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/account/: page.tsx
src/app/contracts/: page.tsx
src/app/market/: page.tsx
src/config/: mod.rs  settings.py
src/contexts/: AuthContext.tsx
src/db/: models.rs
src/i18n/: config.ts
src/kafka/: consumer.py
src/middleware/: auth.rs
src/models/: entities.py
src/processors/: spark_processor.py
src/services/: api.ts
src/storage/: elasticsearch.py  redis_cache.py
src/styles/: theme.ts
src/types/: questionnaire.ts
tests/load/: api_load_test.js
(+36 files in other folders)
