[package]
name = "tippay-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and utilities
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
deadpool-postgres = "0.11"

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"

# Serialization & Types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }

# Error Handling & Logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenv = "0.15"
config = "0.13"

# Metrics & Monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12" 